# Pierogi2D-old

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  init.sh
cmake_modules/: FindSFML.cmake
resources/images/: char2x.lua  spritesheet_testsprite.lua  testsprite.lua  testsprite2.lua
resources/objects/: test_object.lua
src/: CMakeLists.txt  GameStateTest.h  main.cpp
src/common/math/: CMakeLists.txt  Constants.h  Interpolation.h  Utility.cpp  Utility.h  VectorHelpers.cpp  VectorHelpers.h
src/engine/: AnimationHandler.cpp  AnimationHandler.h  Application.cpp  Application.h  BaseState.h  CMakeLists.txt  ConsoleQueue.cpp  ConsoleQueue.h  DebugLine.cpp  DebugLine.h  Directories.h  DynamicQuadTree.h  Entity.cpp  Entity.h  Factory.cpp  Factory.h  GameEngine.cpp  GameEngine.h  GameState.cpp  GameState.h  GameStateStack.cpp  GameStateStack.h  GameStateTest.cpp  GameStateTest.h  IGameState.h  IState.h  ObjectManager.cpp  ObjectManager.h  Pool.h  QuadTree.h  ResourceHandler.h  Scene.cpp  Scene.h  SceneManager.h  SceneNode.h  SceneNodeManager.cpp  SceneNodeManager.h  StateHandler.cpp  StateHandler.h  TextureHandler.cpp  (+6 more)
src/engine/animation/: AnimationController.cpp  AnimationController.h  AnimationHandler.cpp  AnimationHandler.h  AnimationManager.cpp  AnimationManager.h  CMakeLists.txt  FrameData.cpp  FrameData.h
src/engine/console/: CMakeLists.txt  ConsoleQueue.cpp  ConsoleQueue.h  DebugConsole.cpp  DebugConsole.h  DebugLine.cpp  DebugLine.h  Logger.cpp  Logger.h  Monitor.h  ValueField.cpp  ValueField.h
src/engine/gameobject/: CMakeLists.txt  Entity.cpp  Entity.h
src/engine/graphics/: AnimatedSprite.cpp  AnimatedSprite.h  Attractor.cpp  Attractor.h  BeamEffect.cpp  BeamEffect.h  CMakeLists.txt  Force.h  Particle.cpp  Particle.h  ParticleArray.cpp  ParticleArray.h  ParticleSystem.cpp  ParticleSystem.h  PointParticle.cpp  PointParticle.h  Sprite.cpp  Sprite.h  SpriteAnimation.cpp  SpriteAnimation.h  TextureHandler.cpp  TextureHandler.h  TextureManager.cpp  TextureManager.h  Tilemap.cpp  Tilemap.h  TilemapData.cpp  TilemapData.h  Vector.cpp  Vector.h  VectorArray.cpp  VectorArray.h
src/engine/gui/: CMakeLists.txt  Widget.cpp  Widget.h  WidgetManager.h  Window.cpp  Window.h
src/engine/input/: CMakeLists.txt  InputTextField.cpp  InputTextField.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
src/engine/lua/: CMakeLists.txt  LuaHelpers.cpp  LuaHelpers.h
src/engine/random/: CMakeLists.txt  Random.cpp  Random.h
src/engine/scene/: CMakeLists.txt  Scene.cpp  Scene.h
src/engine/state/: CMakeLists.txt  GameState.cpp  GameState.h  GameStateStack.cpp  GameStateStack.h  GameStateTest.cpp  GameStateTest.h  IGameState.h
src/engine/states/: GameState.cpp  GameState.h
test/ut/: CMakeLists.txt  test_Trivial.cpp
test/ut/engine/: CMakeLists.txt  test_ConsoleQueue.cpp  test_ConsoleQueue.h  test_DebugLine.cpp  test_Pool.cpp  test_Pool.h  test_SceneNodeManager.cpp  test_SceneNodeManager.h  test_Tree.cpp  test_Tree.h  test_ValueField.cpp
test/ut/engine/animation/: test_AnimationHandler.cpp  test_AnimationHandler.h  test_AnimationManager.cpp  test_AnimationManager.h
